@@ -3,3 +3,6 @@ sftp (copy file corrupt server while changing to root and execute copy)
 close / open terminal not working when connecting / disconnecting
 
 double text on the terminal after connect / disconnect / connect
+
+when reaching the end of the line in the terminal it doesn't skip a line (only while typing)
+
